squash an ugly bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -167,4 +167,5 @@ footer ul li {
 
 div.about_logo  {
 	float: left;
+	min-height: 475px;
 }
